automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
       <div id="dodger" style="bottom: 0px; left: 180px;"></div>
     </div>
     <script>
-      // your code here
+     function moveDodgerRight(){
+       var leftN
+     }
     </script>
   </body>
 </html>
