--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </div>
     <script>
      function moveDodgerRight(){
-       var leftN
+       var leftNumber
      }
     </script>
   </body>
