--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     </div>
     <script>
      function moveDodgerRight(){
-       var leftNumber
+	var leftNumber = dodger.style.left.replace('px',' ')
+    var left = parseInt(leftNumber, 10)
+    if (left < 360){
+        dodger.style.left = `${left + 1}px`}
+}
      }
     </script>
   </body>
